force-app/main/default/objects/Opportunity/fields/Revenue_Share__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share__c</fullName>
    <description>Formulate to calculate revenue share for Align and Palermo</description>
    <formula>IF(
    NOT( ISBLANK( SBQQ__PrimaryQuote__r.Revenue_Share__c ) ),
     SBQQ__PrimaryQuote__r.Revenue_Share__c,0  


    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formulate to calculate revenue share for Align and Palermo</inlineHelpText>
    <label>Revenue Share %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>