force-app/main/default/objects/Opportunity/fields/RFL__c.field-meta.xml
<CustomField>
    <fullName>RFL__c</fullName>
    <label>zOpportunity Loss - Reason</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>