force-app/main/default/objects/Opportunity/fields/SAT__c.field-meta.xml
<CustomField>
    <fullName>SAT__c</fullName>
    <description>internal process use.</description>
    <label>zShoot Date - Misc - SAT</label>
    <type>DateTime</type>
</CustomField>