force-app/main/default/objects/Opportunity/fields/Second_Hold_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Second_Hold_Calendar__c</fullName>
    <label>Shoot Date - 2nd</label>
    <length>100</length>
    <type>Text</type>
</CustomField>