force-app/main/default/objects/Opportunity/fields/Service_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Service_of_Interest__c</fullName>
    <label>zTypeform - Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Description</valueSetName>
    </valueSet>
</CustomField>