force-app/main/default/objects/Opportunity/fields/Service_Type_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Sub_Type__c</fullName>
    <description>Required Field when entering Opp in Gmail Integration Panel.
Included in Opp Name Automation w a &apos;_P&apos; for Product and &apos;_OF&apos; for On Model</description>
    <label>Service, Sub</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Model</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>