force-app/main/default/objects/Opportunity/fields/Services_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Services_of_Interest__c</fullName>
    <label>zService Type - Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Services_of_Interest</valueSetName>
    </valueSet>
</CustomField>