force-app/main/default/objects/Opportunity/fields/Services_Requested__c.field-meta.xml
<CustomField>
    <fullName>Services_Requested__c</fullName>
    <label>zService Type - Requested</label>
    <length>200</length>
    <type>Text</type>
</CustomField>