force-app/main/default/objects/Opportunity/fields/Shoot1DT__c.field-meta.xml
<CustomField>
    <fullName>Shoot1DT__c</fullName>
    <description>Informs QB to match Close Date to avoid errors of Close Date &amp; QB Invoice Date being 1 Day Off</description>
    <formula>DATETIMEVALUE(Shoot_Date__c) + 1020/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Informs QB to match Close Date to avoid errors of Close Date &amp; QB Invoice Date being 1 Day Off</inlineHelpText>
    <label>zShoot Date - Start - Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>