force-app/main/default/objects/Opportunity/fields/Shoot1Text__c.field-meta.xml
<CustomField>
    <fullName>Shoot1Text__c</fullName>
    <formula>CASE(MONTH( Shoot_Date__c ),
1, &quot;JAN&quot;,
2, &quot;FEB&quot;,
3, &quot;MAR&quot;, 
4, &quot;APR&quot;, 
5, &quot;MAY&quot;, 
6, &quot;JUN&quot;,
7, &quot;JUL&quot;,
8, &quot;AUG&quot;,
9, &quot;SEP&quot;,
10, &quot;OCT&quot;,
11, &quot;NOV&quot;,
12, &quot;DEC&quot;,
&quot;TBD&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zPandadoc - Shoot Date - Start - Text</label>
    <type>Text</type>
</CustomField>