force-app/main/default/objects/Opportunity/fields/Shoot2DT__c.field-meta.xml
<CustomField>
    <fullName>Shoot2DT__c</fullName>
    <description>This is a lookup field of the Confirmed Shoot Date - End field 
It adds &apos;Time&apos; which factors into the Salesforce to Quickbooks invoice auto generation via Workato</description>
    <formula>DATETIMEVALUE( Shoot_Date_2__c ) + 1020/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a lookup field of the Confirmed Shoot Date - End field 
It adds &apos;Time&apos; which factors into the Salesforce to Quickbooks invoice auto generation via Workato</inlineHelpText>
    <label>zShoot Date - End - Date/Time</label>
    <type>DateTime</type>
</CustomField>