force-app/main/default/objects/Opportunity/fields/Shoot2MonthText__c.field-meta.xml
<CustomField>
    <fullName>Shoot2MonthText__c</fullName>
    <description>Formula field of Confirmed Shoot Date - End Fields and displays date field as Short Form Months
Used in Pandadoc Integration for estimates/invoices</description>
    <formula>CASE(MONTH( Shoot_Date_2__c ),
1, &quot;JAN&quot;,
2, &quot;FEB&quot;,
3, &quot;MAR&quot;, 
4, &quot;APR&quot;, 
5, &quot;MAY&quot;, 
6, &quot;JUN&quot;,
7, &quot;JUL&quot;,
8, &quot;AUG&quot;,
9, &quot;SEP&quot;,
10, &quot;OCT&quot;,
11, &quot;NOV&quot;,
12, &quot;DEC&quot;,
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field of Confirmed Shoot Date - End Fields and displays date field as Short Form Months
Used in Pandadoc Integration for estimates/invoices</inlineHelpText>
    <label>zPandadoc - Shoot Date - End - Text</label>
    <type>Text</type>
</CustomField>