force-app/main/default/objects/Opportunity/fields/Shoot_1_Full_Text__c.field-meta.xml
<CustomField>
    <fullName>Shoot_1_Full_Text__c</fullName>
    <formula>Shoot1Text__c +&quot; &quot; +TEXT(DAY(Shoot_Date__c))+&quot;, &quot;+TEXT(YEAR(Shoot_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zPandadoc - Shoot Date - Start - Text</label>
    <type>Text</type>
</CustomField>