force-app/main/default/objects/Opportunity/fields/Shoot_1_Title_Case__c.field-meta.xml
<CustomField>
    <fullName>Shoot_1_Title_Case__c</fullName>
    <description>Displayed on Pandadoc Estimates in a clear manner for Clients as opposed to displaying as Date Fields</description>
    <formula>Month_Text_1_Title__c +&quot; &quot; +TEXT(DAY(Shoot_Date__c))+&quot;, &quot;+TEXT(YEAR(Shoot_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zPandadoc - Shoot Date - Start - Title</label>
    <type>Text</type>
</CustomField>