force-app/main/default/objects/Opportunity/fields/Shoot_2__c.field-meta.xml
<CustomField>
    <fullName>Shoot_2__c</fullName>
    <description>Enter End Date of Opp
Displayed on Opp Page View as Confirmed Shoot Date.
Flows to Shoot Date Calendar + warns of conflicting opportunity dates on opp creation</description>
    <formula>Month_2_Text_Title__c +&quot; &quot; +TEXT(DAY( Shoot_Date_2__c ))+&quot;, &quot;+TEXT(YEAR( Shoot_Date_2__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Enter End Date of Opp
Displayed on Opp Page View as Confirmed Shoot Date.
Flows to Shoot Date Calendar + warns of conflicting opportunity dates on opp creation</inlineHelpText>
    <label>zPandadoc - Shoot Date - End</label>
    <type>Text</type>
</CustomField>