force-app/main/default/objects/Opportunity/fields/Shoot_2_Full_Text__c.field-meta.xml
<CustomField>
    <fullName>Shoot_2_Full_Text__c</fullName>
    <description>Looks up Confirmed Shoot Date - Start and End Fields and displays Date Fields as Text Fields
Used in Pandadoc Integration to display Date Fields in more beautiful (text) method</description>
    <formula>Shoot2MonthText__c +&quot; &quot; +TEXT(DAY( Shoot_Date_2__c ))+&quot;, &quot;+TEXT(YEAR( Shoot_Date_2__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Looks up Confirmed Shoot Date - Start and End Fields and displays Date Fields as Text Fields
Used in Pandadoc Integration to display Date Fields in more beautiful (text) method</inlineHelpText>
    <label>zPandadoc - Shoot Date - Text - Full</label>
    <type>Text</type>
</CustomField>