force-app/main/default/objects/Opportunity/fields/Shoot_2_Title_Case__c.field-meta.xml
<CustomField>
    <fullName>Shoot_2_Title_Case__c</fullName>
    <description>Displayed on Pandadoc Estimates in clear manner for Clients as opposed to displaying as Date Fields</description>
    <formula>Month_2_Text_Title__c +&quot; &quot; +TEXT(DAY( Shoot_Date_2__c ))+&quot;, &quot;+TEXT(YEAR( Shoot_Date_2__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zPandadoc - Shoot Date - End - Title</label>
    <type>Text</type>
</CustomField>