force-app/main/default/objects/Opportunity/fields/Shoot_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Shoot_Date_2__c</fullName>
    <description>End Date of Opp
Displayed on Opp Page View as Confirmed Shoot Date.
Fows into SF Shoot Date Calendar + issues warnings when entering in conflicting opp dates on opp creation</description>
    <inlineHelpText>End Date of Opp
Displayed on Opp Page View as Confirmed Shoot Date.
Fows into SF Shoot Date Calendar + issues warnings when entering in conflicting opp dates on opp creation</inlineHelpText>
    <label>Shoot Date - End</label>
    <type>Date</type>
</CustomField>