force-app/main/default/objects/Opportunity/fields/Shoot_Date__c.field-meta.xml
<CustomField>
    <fullName>Shoot_Date__c</fullName>
    <description>Start Date of Opportunity.
Displayed on Opp Page View as Confirmed Shoot Date.
Flows into SF Shoot Date Calendar + issues warnings when entering in conflicting opp dates on opp creation</description>
    <inlineHelpText>Start Date of Opportunity.
Displayed on Opp Page View as Confirmed Shoot Date.
Flows into SF Shoot Date Calendar + issues warnings when entering in conflicting opp dates on opp creation</inlineHelpText>
    <label>Shoot Date - Start</label>
    <type>Date</type>
</CustomField>