force-app/main/default/objects/Opportunity/fields/Shoot_Days_Minus_1__c.field-meta.xml
<CustomField>
    <fullName>Shoot_Days_Minus_1__c</fullName>
    <formula>Days__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zShoot Date - Misc - Minus 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>