force-app/main/default/objects/Opportunity/fields/Shoot_Hold_1__c.field-meta.xml
<CustomField>
    <fullName>Shoot_Hold_1__c</fullName>
    <description>Field located in Gmail Integration for Opp Creation.
Lead Producers enter 2nd Option Start Dates here.
Integrates w Shoot Holds Calendar. 
Warnings for conflicting Holds in calendar to reduce margin of error.</description>
    <inlineHelpText>Field located in Gmail Integration for Opp Creation.
Lead Producers enter 2nd Option Start Dates here.
Integrates w Shoot Holds Calendar. 
Warnings for conflicting Holds in calendar to reduce margin of error.</inlineHelpText>
    <label>Shoot Date - 2nd - Start</label>
    <type>Date</type>
</CustomField>