force-app/main/default/objects/Opportunity/fields/Shoot_Hold_2__c.field-meta.xml
<CustomField>
    <fullName>Shoot_Hold_2__c</fullName>
    <description>Located in Gmail Integration for Opp Creation.
Enter 2nd Option End Dates here.
Integrates w Shoot Holds Calendar. 
Warning to inform of conflicting Holds in calendar to reduce error.</description>
    <inlineHelpText>Located in Gmail Integration for Opp Creation.
Enter 2nd Option End Dates here.
Integrates w Shoot Holds Calendar. 
Warning to inform of conflicting Holds in calendar to reduce error.</inlineHelpText>
    <label>Shoot Date - 2nd - End</label>
    <type>Date</type>
</CustomField>