force-app/main/default/objects/Opportunity/fields/Shoot_Hold_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Shoot_Hold_Calendar__c</fullName>
    <label>Shoot Date - Holds</label>
    <length>100</length>
    <type>Text</type>
</CustomField>