force-app/main/default/objects/Opportunity/fields/Stage_Document_Automated__c.field-meta.xml
<CustomField>
    <fullName>Stage_Document_Automated__c</fullName>
    <description>Stages that are automatically managed by Pandadoc.</description>
    <label>Stage - Pandadoc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote Sent</fullName>
            </value>
            <value>
                <fullName>Quote Signed</fullName>
            </value>
            <value>
                <fullName>Proposal Sent</fullName>
            </value>
            <value>
                <fullName>Proposal Signed</fullName>
            </value>
            <value>
                <fullName>Invoice Not Sent</fullName>
            </value>
            <value>
                <fullName>Invoice Sent</fullName>
            </value>
            <value>
                <fullName>Invoice Paid</fullName>
            </value>
            <value>
                <fullName>Quote Generated</fullName>
            </value>
            <value>
                <fullName>Proposal Generated</fullName>
            </value>
            <value>
                <fullName>Invoice Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>