force-app/main/default/objects/Opportunity/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>zOpportunity - Stage</label>
    <type>TextArea</type>
</CustomField>