force-app/main/default/objects/Opportunity/fields/stringnum__c.field-meta.xml
<CustomField>
    <fullName>stringnum__c</fullName>
    <formula>&quot;$&quot; + TEXT(floor(Tax_to_collect__c)) + &quot;.&quot; + right (
text((1+ROUND(Tax_to_collect__c, 2) - floor(Tax_to_collect__c))*100),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zPandadoc - Sales Tax - Text</label>
    <type>Text</type>
</CustomField>