force-app/main/default/objects/Opportunity/fields/Sub_Account__c.field-meta.xml
<CustomField>
    <fullName>Sub_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account lookup which is sub-account/sub-brand of Account opp is connected to. 
Reports on various financials specific to sub-account.</description>
    <inlineHelpText>Account lookup which is sub-account/sub-brand of Account opp is connected to. 
Reports on various financials specific to sub-account.</inlineHelpText>
    <label>Account - Sub</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>