force-app/main/default/objects/Opportunity/fields/Tax_to_collect__c.field-meta.xml
<CustomField>
    <fullName>Tax_to_collect__c</fullName>
    <description>This Advanced Formula field sums the Total Taxable Quote Lines from the Primary Opportunity Quote.

Used in PandaDoc → Estimates &amp; invoices reference this field to calculate Sales Tax Amounts.
Not used in QuickBooks → QuickBooks applies sales tax automatically based on the &apos;Taxable&apos; field in Product Records.</description>
    <formula>SBQQ__PrimaryQuote__r.Total_tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax (Opp)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>