force-app/main/default/objects/Opportunity/fields/Text_Amount__c.field-meta.xml
<CustomField>
    <fullName>Text_Amount__c</fullName>
    <description>Formula Field used by Pandadoc Integration for Estimate/Invoice Creation</description>
    <formula>&quot;$&quot; + TEXT(floor(Amount)) + &quot;.&quot; + right (
text((1+ROUND(Amount, 2) - floor(Amount))*100),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field used by Pandadoc Integration for Estimate/Invoice Creation</inlineHelpText>
    <label>zPandadoc - Amount - Text</label>
    <type>Text</type>
</CustomField>