force-app/main/default/objects/Opportunity/fields/Text_Deposit_Amt__c.field-meta.xml
<CustomField>
    <fullName>Text_Deposit_Amt__c</fullName>
    <description>Formula Field used by Pandadoc Integration for Estimate/Invoice Creation</description>
    <formula>&quot;$&quot; + TEXT(floor(Deposit_Amount_Paid__c	)) + &quot;.&quot; + right (
text((1+Deposit_Amount_Paid__c	 - floor (Deposit_Amount_Paid__c	))*100), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field used by Pandadoc Integration for Estimate/Invoice Creation</inlineHelpText>
    <label>zPandadoc - Deposit - Amount - Text</label>
    <type>Text</type>
</CustomField>