force-app/main/default/objects/Opportunity/fields/Text_invoice_amt__c.field-meta.xml
<CustomField>
    <fullName>Text_invoice_amt__c</fullName>
    <description>Formula Field used by Pandadoc Integration for Estimate/Invoice Creation</description>
    <formula>&quot;$&quot; + TEXT(floor(Invoice_Amount__c)) + &quot;.&quot; + right (
text((1+ROUND(Invoice_Amount__c, 2) - floor(Invoice_Amount__c))*100),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field used by Pandadoc Integration for Estimate/Invoice Creation</inlineHelpText>
    <label>zPandadoc - Invoice - Amount - Text</label>
    <type>Text</type>
</CustomField>