force-app/main/default/objects/Opportunity/fields/Text_Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Text_Processing_Fee__c</fullName>
    <description>Formula Field used by Pandadoc Integration for Estimate/Invoice Creation</description>
    <formula>&quot;$&quot; + TEXT(floor( CC_Fee_Estimate__c )) + &quot;.&quot; + right (
text((1+ROUND( CC_Fee_Estimate__c , 2) - floor( CC_Fee_Estimate__c ))*100),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field used by Pandadoc Integration for Estimate/Invoice Creation</inlineHelpText>
    <label>zPandadoc - CC Fee - Text</label>
    <type>Text</type>
</CustomField>