force-app/main/default/objects/Opportunity/fields/Text_Processing_Fee_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Text_Processing_Fee_Invoice__c</fullName>
    <description>Formula Field which converts CC Processing Fee $ Amount to Text
Used for Pandadoc Integration as Pandadoc does not accept $ Amounts in Custom Text Fields</description>
    <formula>&quot;$&quot; &amp;( 
IF(CC_Fee_invoice__c &lt; 0, &quot;-&quot;, &quot;&quot;) &amp; 
IF(ABS(CC_Fee_invoice__c) &gt;= 1000000, TEXT(FLOOR(ABS(CC_Fee_invoice__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
IF(ABS(CC_Fee_invoice__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(CC_Fee_invoice__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(ABS(CC_Fee_invoice__c))), 3) &amp; &quot;.&quot; &amp; 
IF(MOD(ABS(CC_Fee_invoice__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(CC_Fee_invoice__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(CC_Fee_invoice__c) , 1), 2) * 100, 99))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field which converts CC Processing Fee $ Amount to Text
Used for Pandadoc Integration as Pandadoc does not accept $ Amounts in Custom Text Fields</inlineHelpText>
    <label>zPandadoc - CC Fee - Invoice - Text</label>
    <type>Text</type>
</CustomField>