force-app/main/default/objects/Opportunity/fields/Text_Shoot_Dates__c.field-meta.xml
<CustomField>
    <fullName>Text_Shoot_Dates__c</fullName>
    <description>Used in Pandadoc Estimaes/Invoices</description>
    <formula>IF( 
    ISNULL( Shoot_Date_2__c ) = TRUE,Shoot_1_Full_Text__c, IF(AND(Shoot_1_Full_Text__c &lt;&gt; NULL, Shoot_1_Full_Text__c = Shoot_2_Full_Text__c),Shoot_1_Full_Text__c,
    IF( Continuous__c = TRUE, Shoot_1_Full_Text__c &amp; &quot; - &quot; &amp;Shoot_2_Full_Text__c, Shoot_1_Full_Text__c &amp; &quot;, &quot; &amp; Shoot_2_Full_Text__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in Pandadoc Estimaes/Invoices</inlineHelpText>
    <label>zPandadoc - Shoot Date - Text - Caps</label>
    <type>Text</type>
</CustomField>