force-app/main/default/objects/Opportunity/fields/Text_Title_Case_Shoot_Dates__c.field-meta.xml
<CustomField>
    <fullName>Text_Title_Case_Shoot_Dates__c</fullName>
    <description>Used in Pandadoc Integration for estimates/invoices</description>
    <formula>IF(
ISNULL( Shoot_Date_2__c ) = TRUE,Shoot_1_Title_Case__c,
IF( Continuous__c = TRUE, Shoot_1_Title_Case__c &amp; &quot; - &quot; &amp;Shoot_2_Title_Case__c, Shoot_1_Title_Case__c &amp; &quot;, &quot; &amp; Shoot_2_Title_Case__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in Pandadoc Integration for estimates/invoices</inlineHelpText>
    <label>zPandadoc - Shoot Date - Text - Lower</label>
    <type>Text</type>
</CustomField>