force-app/main/default/objects/Opportunity/fields/Total_Cost_D__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_D__c</fullName>
    <label>zMargin - Total Product</label>
    <summarizedField>OpportunityLineItem.Total_Margin__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>