force-app/main/default/objects/Opportunity/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>Rollup Calculation Field which looks up # of Days (Subscription Term) * All Quote Line Items to calculate Total Customer Amount
Not included on Page View</description>
    <inlineHelpText>Rollup Calculation Field which looks up # of Days (Subscription Term) * All Quote Line Items to calculate Total Customer Amount
Not included on Page View</inlineHelpText>
    <label>zShoot Date - # Day - Price</label>
    <summarizedField>OpportunityLineItem.Total_List_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>