force-app/main/default/objects/Opportunity/fields/True_Margin__c.field-meta.xml
<CustomField>
    <fullName>True_Margin__c</fullName>
    <description>This Margin field (True_Margin__c) is a Currency field with no formula applied. Since it doesn&apos;t have a formula, its value is likely being manually entered, imported, or automatically populated by:

Workflows or Processes in Salesforce.
Apex Triggers that calculate and update the value.
Third-party integrations (e.g., CPQ, Breadwinner).
API updates from external systems like QuickBooks or PandaDoc.
Manual entry by users during opportunity updates.

What to Check Next:
Go to Setup &gt; Process Builder, Workflow Rules, or Apex Triggers to see if there is any automation updating this field.
Check if any integration tool (like Breadwinner, CPQ, or external financial systems) is pushing data into this field.
In the Quote object, verify how its margin field is calculated, as it may use a formula pulling data differently from this manually managed field.</description>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>