force-app/main/default/objects/Opportunity/fields/TrueAmt_for_Retainer__c.field-meta.xml
<CustomField>
    <fullName>TrueAmt_for_Retainer__c</fullName>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zRetainer - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>