force-app/main/default/objects/Opportunity/fields/UPPER_CLIENT__c.field-meta.xml
<CustomField>
    <fullName>UPPER_CLIENT__c</fullName>
    <description>Lookup Field for Account Name which also updates text to ALL CAPS
Used by Pandadoc Integration for Estimate/Invoice</description>
    <formula>UPPER ( Account_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lookup Field for Account Name which also updates text to ALL CAPS
Used by Pandadoc Integration for Estimate/Invoice</inlineHelpText>
    <label>zPandadoc - Account Name - Uppercase</label>
    <type>Text</type>
</CustomField>