force-app/main/default/objects/Opportunity/fields/Upper_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Upper_Descriptor__c</fullName>
    <description>Makes field all CAPS for Pandadoc Estimates/Invoices</description>
    <formula>UPPER ( Opportunity_Descriptor__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Makes field all CAPS for Pandadoc Estimates/Invoices</inlineHelpText>
    <label>zPandadoc - Opportunity Descriptor</label>
    <type>Text</type>
</CustomField>