force-app/main/default/objects/Opportunity/fields/UPPER_TYPE__c.field-meta.xml
<CustomField>
    <fullName>UPPER_TYPE__c</fullName>
    <formula>UPPER (TEXT (  Lead_Type__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zPandadoc - Service Type - Caps</label>
    <type>Text</type>
</CustomField>