force-app/main/default/objects/Opportunity/fields/X6_Months_From_Confirmed_Shoot_Date_Star__c.field-meta.xml
<CustomField>
    <fullName>X6_Months_From_Confirmed_Shoot_Date_Star__c</fullName>
    <description>Email notification if 6+ month from last &apos;Won&apos; shoot date
Useful for client retention</description>
    <formula>Shoot_Date_2__c  = TODAY() - 183</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email notification if 6+ month from last &apos;Won&apos; shoot date
Useful for client retention</inlineHelpText>
    <label>zShoot Date - Misc - 6M From Last Shoot</label>
    <type>Checkbox</type>
</CustomField>