force-app/main/default/objects/Opportunity/fields/zAdded_to_site__c.field-meta.xml
<CustomField>
    <fullName>zAdded_to_site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zMarketing - Website - Uploaded</label>
    <type>Checkbox</type>
</CustomField>