force-app/main/default/objects/Opportunity/fields/zAssets_Ready_to_Upload__c.field-meta.xml
<CustomField>
    <fullName>zAssets_Ready_to_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zMarketing - Website - Ready to Upload</label>
    <type>Checkbox</type>
</CustomField>