force-app/main/default/objects/Opportunity/fields/zAssets_To_Site__c.field-meta.xml
<CustomField>
    <fullName>zAssets_To_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zMarketing - Website - Approved</label>
    <type>Checkbox</type>
</CustomField>