force-app/main/default/objects/Opportunity/fields/zDeliverable_Size_Motion__c.field-meta.xml
<CustomField>
    <fullName>zDeliverable_Size_Motion__c</fullName>
    <description>Input Motion Deliverable Sizes for Motion Production Opp</description>
    <inlineHelpText>Input Motion Deliverable Sizes for Motion Production Opp</inlineHelpText>
    <label>zDeliverables - Motion - Size</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>16:9</fullName>
            </value>
            <value>
                <fullName>1:1</fullName>
            </value>
            <value>
                <fullName>4:5</fullName>
            </value>
            <value>
                <fullName>9:16</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>