force-app/main/default/objects/Opportunity/fields/zMotion_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>zMotion_Deliverables__c</fullName>
    <description>Text field to input Motion Deliverable info for Motion Production Opp 
Includes Qty of Deliverables</description>
    <inlineHelpText>Text field to input Motion Deliverable info for Motion Production Opp 
Includes Qty of Deliverables</inlineHelpText>
    <label>zDeliverables - Motion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>