force-app/main/default/objects/Opportunity/recordTypes/Retainer_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Retainer_Record_Type</fullName>
    <active>false</active>
    <businessProcess>Standard</businessProcess>
    <description>Extra information for Retainer record types</description>
    <label>Retainer Record Type</label>
</RecordType>